--- a/index-edm.html
+++ b/index-edm.html
@@ -23,17 +23,17 @@ var spec = {
 "data": [
     {
       "name": "table",
-      
-      "values": [
-        {"category": "A", "amount": 28},
-        {"category": "B", "amount": 55},
-        {"category": "C", "amount": 43},
-        {"category": "D", "amount": 91},
-        {"category": "E", "amount": 81},
-        {"category": "F", "amount": 53},
-        {"category": "G", "amount": 19},
-        {"category": "H", "amount": 87}
-      ]
+      "url": "https://raw.githubusercontent.com/miroslavlison/Misc/master/data/ICM%20Data.csv",
+    //   "values": [
+    //     {"category": "A", "amount": 28},
+    //     {"category": "B", "amount": 55},
+    //     {"category": "C", "amount": 43},
+    //     {"category": "D", "amount": 91},
+    //     {"category": "E", "amount": 81},
+    //     {"category": "F", "amount": 53},
+    //     {"category": "G", "amount": 19},
+    //     {"category": "H", "amount": 87}
+    //   ]
     }
 ],
 
@@ -53,14 +53,14 @@ var spec = {
     {
       "name": "xscale",
       "type": "band",
-      "domain": {"data": "table", "field": "category"},
+      "domain": {"data": "table", "field": "ImpactStartDate"},
       "range": "width",
       "padding": 0.05,
       "round": true
     },
     {
       "name": "yscale",
-      "domain": {"data": "table", "field": "amount"},
+      "domain": {"data": "table", "field": "Severity"},
       "nice": true,
       "range": "height"
     }
