--- a/index-edm.html
+++ b/index-edm.html
@@ -14,7 +14,6 @@
 
 var spec = {
 
-
 "$schema": "https://vega.github.io/schema/vega/v3.0.json",
 "padding": 5,
 "width": 720,
@@ -24,16 +23,8 @@ var spec = {
     {
       "name": "table",
       "url": "https://raw.githubusercontent.com/miroslavlison/Misc/master/data/ICMBreakdown.csv",
-    //   "values": [
-    //     {"category": "A", "amount": 28},
-    //     {"category": "B", "amount": 55},
-    //     {"category": "C", "amount": 43},
-    //     {"category": "D", "amount": 91},
-    //     {"category": "E", "amount": 81},
-    //     {"category": "F", "amount": 53},
-    //     {"category": "G", "amount": 19},
-    //     {"category": "H", "amount": 87}
-    //   ]
+      "format": {"type": "csv", "parse": "auto"}
+  
     }
 ],
 
@@ -77,9 +68,9 @@ var spec = {
       "from": {"data":"table"},
       "encode": {
         "enter": {
-          "x": {"scale": "xscale", "field": "category"},
+          "x": {"scale": "xscale", "field": "CreateDate"},
           "width": {"scale": "xscale", "band": 1},
-          "y": {"scale": "yscale", "field": "amount"},
+          "y": {"scale": "yscale", "field": "Severity1"},
           "y2": {"scale": "yscale", "value": 0}
         },
         "update": {
@@ -99,9 +90,9 @@ var spec = {
           "fill": {"value": "#333"}
         },
         "update": {
-          "x": {"scale": "xscale", "signal": "tooltip.category", "band": 0.5},
-          "y": {"scale": "yscale", "signal": "tooltip.amount", "offset": -2},
-          "text": {"signal": "tooltip.amount"},
+          "x": {"scale": "xscale", "signal": "tooltip.CreateDate", "band": 0.5},
+          "y": {"scale": "yscale", "signal": "tooltip.Severity1", "offset": -2},
+          "text": {"signal": "tooltip.Severity1"},
           "fillOpacity": [
             {"test": "datum === tooltip", "value": 0},
             {"value": 1}
