Adding new chart

--- a/index-edm-bar.html
+++ b/index-edm-bar.html
@@ -74,10 +74,10 @@ var spec = {
           "y2": {"scale": "yscale", "value": 0}
         },
         "update": {
-          "fill": {"value": "steelblue"}
+          "fill": {"value": "red"}
         },
         "hover": {
-          "fill": {"value": "red"}
+          "fill": {"value": "darkred"}
         }
       }
     },
